@@ -96,6 +96,7 @@ const ConfigTemplate config_block_templates[] = {
 	{ "filter", true },
 	{ "database" },
 	{ "neighbors", true },
+	{ "partition", true },
 };
 
 static constexpr unsigned n_config_block_templates =
